<resources>
    <string name="app_name">OPTheme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_use">Welcome to Use</string>
    <string name="oneplus">OnePlus</string>
    <string name="themes">Themes</string>
    <string name="login">Login</string>
    <string name="account">Account...</string>
    <string name="password">Password...</string>
    <string name="retieve_password">Retieve Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="size">Size</string>
    <string name="download">Download</string>
    <string name="supported_devices">Supported\nDevices</string>
    <string name="setting">Setting</string>
    <string name="fps_default_30">FPS(Default:30)</string>
    <string name="play_time_unit_ms">Play Time(Unit:ms)</string>
    <string name="frequency">Frequency</string>
    <string name="done">Done</string>
    <string name="users">Users</string>
    <string name="powered_by">Powered by：</string>
    <string name="thanks">Thanks:</string>
</resources>