<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="bottom"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_use"
            android:textColor="@color/blue_h1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneplus"
                android:textColor="@color/red_h1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/themes"
                android:textColor="@color/black_h1"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/gray_h2"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableBottom="@drawable/shape_gray_line"
            android:hint="@string/account"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_h2"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@null"
            android:drawableBottom="@drawable/shape_gray_line"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_h2"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/retieve_password"
            android:textColor="@color/blue_h1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue_h1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_atyLogin_login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_bg_login"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</FrameLayout>