<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_bg"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue_h1"
            android:paddingStart="15dp"
            tools:ignore="PxUsage,RtlSymmetry">

            <Button
                android:id="@+id/btn_atyDetails_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/close"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@drawable/model_devices"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/name"
                    android:textColor="@color/gray_h2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_atyDetails_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/blue_h1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="流光溢彩" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/author"
                    android:textColor="@color/gray_h2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_atyDetails_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/blue_h1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="无锡二胖" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/size"
                    android:textColor="@color/gray_h2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_atyDetails_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/blue_h1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="1.12MB" />

                <Button
                    android:id="@+id/btn_atyLogin_login"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_bg_login"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/ic_baseline_crop_portrait_gray"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/supported_devices"
                        android:textColor="@color/gray_h1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_star_border_gray"
                    android:text="@string/setting"
                    android:textColor="@color/gray_h1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="70dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="一加6"
                        android:textColor="@color/gray_h2"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="一加6T"
                        android:textColor="@color/gray_h2"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="一加7"
                        android:textColor="@color/gray_h2"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_atyDetails_fps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:drawableBottom="@drawable/shape_gray_line"
                        android:hint="@string/fps_default_30"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColorHint="@color/gray_h2"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/ll_atyDetails_aod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/et_atyDetails_playTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@null"
                            android:drawableBottom="@drawable/shape_gray_line"
                            android:hint="@string/play_time_unit_ms"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColorHint="@color/gray_h2" />

                        <EditText
                            android:id="@+id/et_atyDetails_frequency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:drawableBottom="@drawable/shape_gray_line"
                            android:hint="@string/frequency"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColorHint="@color/gray_h2" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>